DashBoard is Added

--- a/Client/src/Components/Home/home.css
+++ b/Client/src/Components/Home/home.css
@@ -4,7 +4,7 @@
 #carousel{
     height: 400px;
 }
-#landing{
+/* #landing{
     font-family: 'Poppins', sans-serif;
     position: absolute;
     top: 10%;
@@ -12,4 +12,4 @@
     right: 8%;
     z-index: 1;
     color: rgb(184, 0, 0);
-}
+} */
