--- a/Client/src/Components/Group/Group.css
+++ b/Client/src/Components/Group/Group.css
@@ -5,6 +5,7 @@
 #inputBox{
     display: flex;
     justify-content: space-evenly;
+   
     gap: 5px;
 }
 .buttons{
@@ -15,6 +16,15 @@
     display: flex;
     /* flex-direction:  ; */
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 15px;
     margin-bottom: 15px;
+}
+@media (max-width:560px) {
+    #inputBox{
+        flex-wrap: wrap;
+    }
+    #inputcalendar{
+        width: 54%;
+    }
 }
