--- a/Client/src/Components/Group/Group.css
+++ b/Client/src/Components/Group/Group.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 #topbuttons{
     display: flex;
 
@@ -15,10 +16,32 @@
 #topGroup{
     display: flex;
     /* flex-direction:  ; */
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 15px;
     margin-bottom: 15px;
+}
+#topGroup>h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+}
+#showAllgroups{
+   display: flex;
+   justify-content: space-around;
+   /* gap:"10px"; */
+   flex-wrap: wrap;
+   margin: 5px;
+   font-family: 'Poppins', sans-serif;
+}
+#showAllgroups>h1{
+    padding: 3px;
+    border-radius: 5px;
+    margin: "10px";
+    margin-bottom: "10px";
+    color: white;
+    background-color: rgb(41, 107, 195);
+    cursor: pointer;
 }
 @media (max-width:560px) {
     #inputBox{
@@ -26,5 +49,8 @@
     }
     #inputcalendar{
         width: 54%;
+    }
+    #showAllgroups>h1{
+      font-size: 14.5px;
     }
 }
