--- a/Client/src/Components/Personal/Personal.css
+++ b/Client/src/Components/Personal/Personal.css
@@ -11,13 +11,22 @@
     padding: 7px;
     margin-bottom: 10px;
 }
+.divforpnots{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid rgb(222, 222, 222);
+    font-family: 'Poppins', sans-serif;
+    padding: 7px;
+    margin-bottom: 10px;
+}
+.divforp:hover{
+    cursor: pointer;
+    background-color: rgb(232, 231, 231);
+    /* background-color: grey; */
+}
 @media (max-width:500px) {
     .divforp{
          font-size: 15px;
     }
-}
-.divforp:hover{
-   cursor: pointer;
-    background-color: rgb(231, 231, 231);
-    /* background-color: grey; */
 }
