--- a/Client/src/Components/Group/Group.css
+++ b/Client/src/Components/Group/Group.css
@@ -30,6 +30,7 @@
    display: flex;
    justify-content: space-around;
    /* gap:"10px"; */
+   /* background-color: rgb(146, 94, 25); */
    flex-wrap: wrap;
    margin: 5px;
    font-family: 'Poppins', sans-serif;
@@ -112,11 +113,14 @@
     #dataGroupsall{
         width: 100%;
     }
-    .imgforpe{
-        width:40px;
-    }
     .titleNames{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:80px
+    }
+    .imgforpe{
     
-        width:20px
+        display: none;
     }
 }
