--- a/Client/src/Components/Group/Group.css
+++ b/Client/src/Components/Group/Group.css
@@ -97,6 +97,34 @@
     margin: auto;
     border-radius: 100px;
 }
+/* style={{display:"flex", flexDirection:"column", alignItems:"flex-end"}} */
+.allmemberss{
+    width:110px;
+ display: flex;
+ flex-direction: column;
+ align-items: flex-end;
+}
+/* style={{display:"flex",alignItems:"end",color:"",gap:"5px"}} */
+.youGive{
+display: flex;
+align-items: flex-end;
+color:#cd0000;
+gap: 5px;
+}
+.youGive h1{
+    width: 40px;
+    font-size: 13px;
+}
+/* style={{display:"flex",alignItems:"end",color:"green",gap:"5px"}} */
+.youTake{
+    display: flex;
+    align-items: flex-end;
+    color: green;
+    gap: 5px;
+}
+.youTake h1{
+    font-size: 13px;
+}
 @media (max-width:560px) {
     #inputBox{
         flex-wrap: wrap;
@@ -108,7 +136,18 @@
       font-size: 14.5px;
     }
     #groupMember{
-        display: none;
+        display: flex;
+        width: 100%;
+        overflow-x: scroll;
+        /* flex-direction: row; */
+        /* display: none; */
+    }
+    #groupMember>div{
+        /* border: 4px solid red; */
+        height: 60px;
+        width:500px;
+        /* width: 600px; */
+        /* flex-direction: column; */
     }
     #dataGroupsall{
         width: 100%;
@@ -118,6 +157,9 @@
     flex-direction: column;
     align-items: center;
     width:80px
+    }
+    #dataparentDiv{
+        flex-direction: column-reverse;
     }
     .imgforpe{
     
