--- a/Client/src/Components/Group/Group.css
+++ b/Client/src/Components/Group/Group.css
@@ -99,31 +99,34 @@
 }
 /* style={{display:"flex", flexDirection:"column", alignItems:"flex-end"}} */
 .allmemberss{
-    width:110px;
+    width:170px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
 }
-/* style={{display:"flex",alignItems:"end",color:"",gap:"5px"}} */
+/* style={{display:"flex",alignItems:"end",color:"",gap:"5px"}} */ 
 .youGive{
+    /* width:170px; */
 display: flex;
 align-items: flex-end;
 color:#cd0000;
 gap: 5px;
 }
 .youGive h1{
-    width: 40px;
-    font-size: 13px;
+    /* width: 40px; */
+    font-size: 12px;
 }
 /* style={{display:"flex",alignItems:"end",color:"green",gap:"5px"}} */
 .youTake{
+    /* width:170px;  */
     display: flex;
     align-items: flex-end;
     color: green;
     gap: 5px;
 }
 .youTake h1{
-    font-size: 13px;
+    /* width: 40px; */
+    font-size: 12px;
 }
 @media (max-width:560px) {
     #inputBox{
