--- a/Client/src/Components/Home/home.css
+++ b/Client/src/Components/Home/home.css
@@ -4,3 +4,25 @@
 #carousel{
     height: 400px;
 }
+#feature{
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+#feature>div{
+    width: 250px;
+    height: 50px;
+    background-color: rgb(230, 50, 179);
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    display: flex;
+}
+#feature>div:hover{
+    cursor: pointer;
+ background-color: rgb(64, 64, 87);
+}
