--- a/Client/src/Components/Home/home.css
+++ b/Client/src/Components/Home/home.css
@@ -9,10 +9,10 @@
   justify-content: space-around;
   /* flex-wrap: wrap; */
 }
-#feature > div {
+#feature > a > div {
   width: 220px;
   height: 40px;
-  background-color: #d53f8c;
+  background-color: #d13b89;
   color: white;
   font-size: 23px;
   text-align: center;
@@ -25,11 +25,11 @@
   cursor: pointer;
   background-color: rgb(64, 64, 87);
 }
-@media (max-width:500px) {
-    #feature > div {
-        width: 150px;
-        height: 40px;
-        font-size: 16px;
-        border-radius: 10px;
-      }
+@media (max-width: 500px) {
+  #feature > a > div {
+    width: 140px;
+    height: 40px;
+    font-size: 16px;
+    border-radius: 10px;
+  }
 }
